<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    grid:columnCount="3" android:layout_width="match_parent"
    android:layout_height="40dp" >

    <android.support.v7.widget.AppCompatTextView grid:layout_columnWeight="1" android:layout_height="match_parent"
        android:layout_width="0dp"
        android:text="@string/ElectionNameHeaderText"
        android:gravity="center"
        android:id="@+id/txtvElectionName"  />
    <android.support.v7.widget.AppCompatTextView grid:layout_columnWeight="1" android:layout_height="match_parent"
        android:layout_width="0dp"
        android:text="@string/ElectionDayHeaderText"
        android:gravity="center"
        android:id="@+id/txtvElectionDay" />
    <android.support.v7.widget.AppCompatTextView grid:layout_columnWeight="1" android:layout_height="match_parent"
        android:layout_width="0dp"
        android:text="@string/ElectionDivisionHeaderText"
        android:gravity="center"
        android:id="@+id/txtvElectionDivision" />

</android.support.v7.widget.GridLayout>